# Landmap

./: .gitignore  README.md
landmap-qgis/: .env.example  .gitignore  IMPLEMENTATION_V2.md  README.md  example.txt
landmap-qgis/.claude/: settings.local.json
landmap-qgis/dashboard/: IMPLEMENTATION_PLAN.md  README.md  package.json  vite.config.ts
landmap-qgis/dashboard/src/: App.css  App.tsx  index.css  qgisHelper.ts
landmap-qgis/extension/: IMPLEMENTATION_PLAN.md  README.md  package.json  vite.config.ts
landmap-qgis/extension/public/: manifest.json
landmap-qgis/extension/src/: App.css  App.tsx  background.ts  index.css
landmap-qgis/mcp-server/: .env.example  README.md  claude_desktop_config.example.json  intercept_requests.py  main.py  manual_setup.py  pyproject.toml  run_server.py  session_state.json  setup_session.py  test_api_call.py  test_auto_capture.py  test_intercept_all.py  test_intercept_tiles.py  test_tile_fetcher.py
landmap-qgis/mcp-server/src/: __init__.py  boundary_service.py  gis_processor.py  server.py  tile_fetcher.py
