[project]
name = "landmap-mcp-server"
version = "1.0.0"
description = "MCP Server for fetching Thai land maps from DOL (กรมที่ดิน)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "geopandas>=0.14.0",
    "pyogrio>=0.7.0",
    "pandas>=2.0.0",
    "shapely>=2.0.0",
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
landmap-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
